--- a/doc/90100-MacchinaAcknowledgements.page
+++ b/doc/90100-MacchinaAcknowledgements.page
@@ -9,7 +9,7 @@ the use of which is hereby acknowledged.
 !!!POCO C++ Libraries
 
 The POCO C++ Libraries are licensed under the Boost Software License.
-Copyright (c) 2006-2015, Applied Informatics Software Engineering GmbH and Contributors.
+Copyright (c) 2006-2018, Applied Informatics Software Engineering GmbH and Contributors.
 
     Boost Software License - Version 1.0 - August 17th, 2003
 
@@ -50,12 +50,12 @@ Portions of the POCO C++ Libraries utilize the
 following copyrighted material, the use of which is hereby acknowledged.
 
 
-!!Expat XML Parser Toolkit 2.0
+!!Expat XML Parser Toolkit
 
     Copyright (c) 1998, 1999, 2000 Thai Open Source Software Center Ltd
                                    and Clark Cooper
     Copyright (c) 2001, 2002, 2003 Expat maintainers.
-    
+
     Permission is hereby granted, free of charge, to any person obtaining
     a copy of this software and associated documentation files (the
     "Software"), to deal in the Software without restriction, including
@@ -63,10 +63,10 @@ following copyrighted material, the use of which is hereby acknowledged.
     distribute, sublicense, and/or sell copies of the Software, and to
     permit persons to whom the Software is furnished to do so, subject to
     the following conditions:
-    
+
     The above copyright notice and this permission notice shall be included
     in all copies or substantial portions of the Software.
-    
+
     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
     EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
@@ -81,7 +81,7 @@ following copyrighted material, the use of which is hereby acknowledged.
 
     Copyright (c) 1983, 1993
     The Regents of the University of California.  All rights reserved.
-    
+
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions
     are met:
@@ -93,7 +93,7 @@ following copyrighted material, the use of which is hereby acknowledged.
     4. Neither the name of the University nor the names of its contributors
        may be used to endorse or promote products derived from this software
        without specific prior written permission.
-    
+
     THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
     ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
     IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -112,22 +112,22 @@ following copyrighted material, the use of which is hereby acknowledged.
 
     Copyright (C) 1991-2, RSA Data Security, Inc. Created 1991. All
     rights reserved.
-    
+
     License to copy and use this software is granted provided that it
     is identified as the "RSA Data Security, Inc. MD4 Message-Digest
     Algorithm" in all material mentioning or referencing this software
     or this function.
-    
+
     License is also granted to make and use derivative works provided
     that such works are identified as "derived from the RSA Data
     Security, Inc. MD4 Message-Digest Algorithm" in all material
     mentioning or referencing the derived work.
-    
+
     RSA Data Security, Inc. makes no representations concerning either
     the merchantability of this software or the suitability of this
     software for any particular purpose. It is provided "as is"
     without express or implied warranty of any kind.
-    
+
     These notices must be retained in any copies of any part of this
     documentation and/or software.
 ----
@@ -137,17 +137,17 @@ following copyrighted material, the use of which is hereby acknowledged.
 
     Copyright (C) 1991-2, RSA Data Security, Inc. Created 1991. All
     rights reserved.
-    
+
     License to copy and use this software is granted provided that it
     is identified as the "RSA Data Security, Inc. MD5 Message-Digest
     Algorithm" in all material mentioning or referencing this software
     or this function.
-    
+
     License is also granted to make and use derivative works provided
     that such works are identified as "derived from the RSA Data
     Security, Inc. MD5 Message-Digest Algorithm" in all material
     mentioning or referencing the derived work.
-    
+
     RSA Data Security, Inc. makes no representations concerning either
     the merchantability of this software or the suitability of this
     software for any particular purpose. It is provided "as is"
@@ -155,37 +155,37 @@ following copyrighted material, the use of which is hereby acknowledged.
 ----
 
 
-!!Perl Compatible Regular Expressions (PCRE) 7.1 or newer
+!!Perl Compatible Regular Expressions (PCRE)
 
     PCRE is a library of functions to support regular expressions whose syntax
     and semantics are as close as possible to those of the Perl 5 language.
-    
+
     Release 5 of PCRE is distributed under the terms of the "BSD" licence, as
     specified below. The documentation for PCRE, supplied in the "doc"
     directory, is distributed under the same terms as the software itself.
-    
+
     Written by: Philip Hazel <ph10@cam.ac.uk>
-    
+
     University of Cambridge Computing Service,
     Cambridge, England. Phone: +44 1223 334714.
-    
-    Copyright (c) 1997-2004 University of Cambridge
+
+    Copyright (c) 1997-2014 University of Cambridge
     All rights reserved.
-    
+
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are met:
-    
+
         * Redistributions of source code must retain the above copyright notice,
           this list of conditions and the following disclaimer.
-    
+
         * Redistributions in binary form must reproduce the above copyright
           notice, this list of conditions and the following disclaimer in the
           documentation and/or other materials provided with the distribution.
-    
+
         * Neither the name of the University of Cambridge nor the names of its
           contributors may be used to endorse or promote products derived from
           this software without specific prior written permission.
-    
+
     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
     AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
     IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -197,21 +197,21 @@ following copyrighted material, the use of which is hereby acknowledged.
     CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
     ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
     POSSIBILITY OF SUCH DAMAGE.
-----    
+----
 
 
-!!zlib 1.2.8
+!!zlib
 
-    Copyright (C) 1995-2004 Jean-loup Gailly and Mark Adler
-    
+    Copyright (C) 1995-2017 Jean-loup Gailly and Mark Adler
+
     This software is provided 'as-is', without any express or implied
     warranty.  In no event will the authors be held liable for any damages
     arising from the use of this software.
-    
+
     Permission is granted to anyone to use this software for any purpose,
     including commercial applications, and to alter it and redistribute it
     freely, subject to the following restrictions:
-    
+
     1. The origin of this software must not be misrepresented; you must not
        claim that you wrote the original software. If you use this software
        in a product, an acknowledgment in the product documentation would be
@@ -219,18 +219,18 @@ following copyrighted material, the use of which is hereby acknowledged.
     2. Altered source versions must be plainly marked as such, and must not be
        misrepresented as being the original software.
     3. This notice may not be removed or altered from any source distribution.
-    
+
     Jean-loup Gailly jloup@gzip.org
     Mark Adler madler@alumni.caltech.edu
 ----
 
 
-!!SQlite 3.7.14 or newer
+!!SQLite
 
-    The original author of SQLite has dedicated the code to the 
-    public domain (http://www.sqlite.org/copyright.html). 
-    Anyone is free to copy, modify, publish, use, compile, sell, or distribute the 
-    original SQLite code, either in source code form or as a compiled binary, 
+    The original author of SQLite has dedicated the code to the
+    public domain (http://www.sqlite.org/copyright.html).
+    Anyone is free to copy, modify, publish, use, compile, sell, or distribute the
+    original SQLite code, either in source code form or as a compiled binary,
     for any purpose, commercial or non-commercial, and by any means.
 ----
 
@@ -266,29 +266,32 @@ following copyrighted material, the use of which is hereby acknowledged.
 ----
 
 
-!!JSON_parser
+!!!pdjson (Public Domain JSON Parser for C)
 
-    Copyright (c) 2005 JSON.org
+    This is free and unencumbered software released into the public domain.
 
-    Permission is hereby granted, free of charge, to any person obtaining a copy
-    of this software and associated documentation files (the "Software"), to deal
-    in the Software without restriction, including without limitation the rights
-    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-    copies of the Software, and to permit persons to whom the Software is
-    furnished to do so, subject to the following conditions:
-    
-    The above copyright notice and this permission notice shall be included in all
-    copies or substantial portions of the Software.
+    Anyone is free to copy, modify, publish, use, compile, sell, or
+    distribute this software, either in source code form or as a compiled
+    binary, for any purpose, commercial or non-commercial, and by any
+    means.
 
-    The Software shall be used for Good, not Evil.
+    In jurisdictions that recognize copyright laws, the author or authors
+    of this software dedicate any and all copyright interest in the
+    software to the public domain. We make this dedication for the benefit
+    of the public at large and to the detriment of our heirs and
+    successors. We intend this dedication to be an overt act of
+    relinquishment in perpetuity of all present and future rights to this
+    software under copyright law.
 
-    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-    SOFTWARE.
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+    IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR
+    OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+    OTHER DEALINGS IN THE SOFTWARE.
+
+    For more information, please refer to <http://unlicense.org/>
 ----
 
 
@@ -303,30 +306,30 @@ following copyrighted material, the use of which is hereby acknowledged.
     Developed by:
 
         LLVM Team
-    
+
         University of Illinois at Urbana-Champaign
-    
+
         http://llvm.org
-    
+
     Permission is hereby granted, free of charge, to any person obtaining a copy of
     this software and associated documentation files (the "Software"), to deal with
     the Software without restriction, including without limitation the rights to
     use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
     of the Software, and to permit persons to whom the Software is furnished to do
     so, subject to the following conditions:
-    
+
         * Redistributions of source code must retain the above copyright notice,
           this list of conditions and the following disclaimers.
-    
+
         * Redistributions in binary form must reproduce the above copyright notice,
           this list of conditions and the following disclaimers in the
           documentation and/or other materials provided with the distribution.
-    
+
         * Neither the names of the LLVM Team, University of Illinois at
           Urbana-Champaign, nor the names of its contributors may be used to
           endorse or promote products derived from this Software without specific
           prior written permission.
-    
+
     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
     FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
@@ -438,7 +441,7 @@ and the Eclipse Public License - v 1.0.
 
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
-    and Eclipse Distribution License v1.0 which accompany this distribution. 
+    and Eclipse Distribution License v1.0 which accompany this distribution.
 ----
 
 
@@ -659,7 +662,7 @@ Font Awesome CSS, LESS, and Sass files are licensed under the MIT License.
 
     The OFL allows the licensed fonts to be used, studied, modified and
     redistributed freely as long as they are not sold by themselves. The
-    fonts, including any derivative works, can be bundled, embedded, 
+    fonts, including any derivative works, can be bundled, embedded,
     redistributed and/or sold with any software provided that any reserved
     names are not used by derivative works. The fonts and derivatives,
     however, cannot be released under any other type of license. The
